<resources>
    <string name="app_name">Trivia App</string>
    <string name="Welcome">Welcome To Trivia App</string>
    <string name="exit">Exit</string>
    <string name="Start">Start Trivia</string>
    <string name="next">next</string>
    <string name="prev">previous</string>
    <string name="per">Your Performance:</string>
    <string name="cor">Correct Answers:</string>
    <string name="fin">Finish</string>
</resources>
