<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:text="@string/Welcome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/welcome"
        android:foregroundGravity="center_vertical"
        android:gravity="center_vertical|center_horizontal"
        android:textSize="25dp" />

    <ImageView
        android:layout_width="match_parent"
        app:srcCompat="@android:drawable/screen_background_light_transparent"
        android:id="@+id/loadingimage"
        android:layout_height="300dp" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="bottom">

        <Button
            android:text="@string/exit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/exit"
            android:layout_weight="1"
            android:layout_gravity="bottom"
            />

        <Button
            android:text="@string/Start"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/start"
            android:layout_weight="1"
            android:layout_gravity="bottom"/>

    </LinearLayout>

</LinearLayout>